@@ -1,0 +1,57 @@
+#!/bin/sh
+#
+# pbs_server	This script will start and stop the PBS Server
+#
+# chkconfig: 345 5 85
+# description: PBS is a versatile batch system for SMPs and clusters
+#
+
+PBS_DAEMON=/usr/sbin/pbs_server
+PBS_HOME=/var/torque
+PIDFILE=$PBS_HOME/server_priv/server.lock
+export PBS_DAEMON PBS_HOME PIDFILE
+
+# Source the library functions
+. /etc/rc.status
+rc_reset
+
+[ -f /etc/sysconfig/pbs_server ] && . /etc/sysconfig/pbs_server
+[ -x $PBS_DAEMON ] || exit
+
+
+# let see how we were called
+case "$1" in
+	start) 
+		echo -n "Starting TORQUE Server: "
+		if [ -r $PBS_HOME/server_priv/serverdb ]
+		then
+			startproc $PBS_DAEMON $SERVER_ARGS
+		else
+			startproc $PBS_DAEMON -t create $DAEMON_ARGS
+		fi
+		rc_status -v
+		;;
+	stop)
+		echo -n "Shutting down TORQUE Server: "
+		qterm -t quick
+		rc_status -v
+		;;
+	status)
+		checkproc -p $PIDFILE pbs_server
+		rc_status -v
+		;;
+	restart)
+		$0 stop
+		$0 start
+		rc_status
+		;;
+	reload)
+		echo -n "Reloading pbs_server: "
+		killproc -p $PIDFILE pbs_server -HUP
+		rc_status -v
+		;;
+	*)
+		echo "Usage: pbs_server {start|stop|restart|status|reload}"
+		exit 1
+esac
+rc_exit
